traintimes/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traintimes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traintimes
  template:
    metadata:
      labels:
        app: traintimes
    spec:
      containers:
        - name: traintimes
          image: 143364350185.dkr.ecr.eu-west-2.amazonaws.com/danielfeather/traintimes:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 3000
