traintimes/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traintimes
spec:
  ports:
  - name: web
    port: 3000
    targetPort: 3000
  selector:
    app: traintimes
